--- a/public/index/css/index.css
+++ b/public/index/css/index.css
@@ -54,72 +54,158 @@
     width:0;}
 /*导航结束*/
 /*banner*/
-.banner{
-    width: 100%;
-    height: 800px;
-    position: relative;
+
+@media (max-width:1920px) {
+    .banner{
+        width: 100%;
+        height: 800px;
+        position: relative;
+    }
+    .bannerbox{
+        width: 1920px;
+        height: 800px;
+        left:0;
+        right:0;
+        position:absolute;
+        margin: 0 auto;
+        overflow: hidden;
+    }
+    .imgbox{
+        width: 1200px;
+        height: 100%;
+        position:relative;
+    }
+    .slides{
+        position: absolute;
+        top: 0;
+        left: 0;
+        right: 0;
+        margin: 0 auto;
+        width: 1200px;
+        height: 100%;
+        transition: all 1s ease;
+
+    }
+    .slides img {
+        position: absolute;
+        left: 0;
+        right:0;
+        top:0;
+        margin: 0 auto;
+        width: 1920px;
+    }
+
+    .bannerleft{
+        width: 50%;
+        position: absolute;
+        top: 0;
+        bottom: 0;
+        left: 225px;
+        line-height: 800px;
+        font-size: 100px;
+        color: #fff;
+        text-align: left;
+        font-family: "宋体";
+        cursor:pointer;
+        opacity: 1;
+    }
+    .bannerleft:hover{
+        opacity: 1;
+    }
+    .bannerright{
+        width: 50%;
+        position: absolute;
+        top: 0;
+        bottom: 0;
+        right: 225px;
+        text-align: right;
+        line-height: 800px;
+        font-size: 100px;
+        color: #fff;
+        font-family: "宋体";
+        cursor:pointer;
+        opacity: 1;
+    }
+    .bannerright:hover{
+        opacity: 1;
+    }
 }
-.bannerbox{
-    width: 100%;
-    height: 800px;
-    left:0;
-    right:0;
-    position:absolute;
-    margin: 0 auto;
-    overflow: hidden;
+@media (max-width:1366px) {
+    .banner{
+        width: 100%;
+        height: 569px;
+        position: relative;
+    }
+    .bannerbox{
+        width: 1349px;
+        height: 569px;
+        left:0;
+        right:0;
+        position:absolute;
+        margin: 0 auto;
+        overflow: hidden;
+    }
+    .imgbox{
+        width: 100%;
+        height: 100%;
+        position:relative;
+
+    }
+    .slides{
+        position: absolute;
+        top: 0;
+        left: 0;
+        right: 0;
+        margin: 0 auto;
+        width: 1349px;
+        height: 100%;
+        transition: all 1s ease;
+
+    }
+    .slides img {
+        width: 1349px;
+    }
+
+    .bannerleft{
+        width: 50%;
+        position: absolute;
+        top: 0;
+        bottom: 0;
+        left: 225px;
+        line-height: 569px;
+        font-size: 100px;
+        color: #fff;
+        text-align: left;
+        font-family: "宋体";
+        cursor:pointer;
+        opacity: 1;
+    }
+    .bannerleft:hover{
+        opacity: 1;
+    }
+    .bannerright{
+        width: 50%;
+        position: absolute;
+        top: 0;
+        bottom: 0;
+        right: 225px;
+        text-align: right;
+        line-height: 569px;
+        font-size: 100px;
+        color: #fff;
+        font-family: "宋体";
+        cursor:pointer;
+        opacity: 1;
+    }
+    .bannerright:hover{
+        opacity: 1;
+    }
 }
-.imgbox{
-    width: 1200px;
-    height: 100%;
-    transition: transform .8s ease;
-}
-.slides{
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 1920px;
-    height: 100%;
-}
-.slides1{
-    position: absolute;
-    top: 0;
-    left: 100%;
-    width: 1366px;
-    height: 100%;
-}
-.bannerleft{
-    width: 50%;
-    position: absolute;
-    top: 0;
-    bottom: 0;
-    left: 225px;
-    line-height: 800px;
-    font-size: 100px;
-    color: #fff;
-    text-align: left;
-    font-family: "宋体";
-    cursor:pointer;
+.toum1{
     opacity: 1;
 }
-.bannerleft:hover{
-    opacity: 1;
-}
-.bannerright{
-    width: 50%;
-    position: absolute;
-    top: 0;
-    bottom: 0;
-    right: 225px;
-    text-align: right;
-    line-height: 800px;
-    font-size: 100px;
-    color: #fff;
-    font-family: "宋体";
-    cursor:pointer;
-    opacity: 1;
-}
-.bannerright:hover{
-    opacity: 1;
+.toum{
+    opacity: 0;
 }
 .btns{
     width: 100px;
