--- a/views/admin/iron_pot.html
+++ b/views/admin/iron_pot.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="/admin/css/public.css">
     <link rel="stylesheet" href="/admin/css/antd.css.map">
     <link rel="stylesheet" href="/admin/css/antd.min.css">
+    <link rel="stylesheet" href="/admin/css/nav.css">
     <link rel="stylesheet" href="/admin/css/iron_pot.css">
 </head>
 <body>
