--- a/views/admin/news.html
+++ b/views/admin/news.html
@@ -8,6 +8,7 @@
     <title>Document</title>
     <link rel="stylesheet" href="/admin/css/antd.css.map">
     <link rel="stylesheet" href="/admin/css/antd.min.css">
+    <link rel="stylesheet" href="/admin/css/nav.css">
     <link rel="stylesheet" href="/admin/css/news.css">
 </head>
 <body>
