--- a/public/index/css/product.css
+++ b/public/index/css/product.css
@@ -481,6 +481,7 @@
     left:2px;
     transition: all .4s ease;
     background: url(/index/images/bin_tline.png);
+    opacity:0;
 }
 .bin_line2{
     width:0;}
