--- a/public/index/css/detail.css
+++ b/public/index/css/detail.css
@@ -36,7 +36,7 @@
 .bin_btn{
     height:80px;
     width:84px;
-    margin-left:56px;
+    margin-left:80px;
     float: right;
     text-align: center;
     font-size: 20px;
@@ -60,6 +60,7 @@
     left:2px;
     transition: all .4s ease;
     background:url(/index/images/bin_tline.png);
+    opacity:0;
 }
 .bin_line2{
     width:0;
@@ -82,6 +83,7 @@
     margin:0 auto;
     margin-top: -30px;
     background: #fff;
+    box-shadow:0 10px 20px #b6b6b6;
 
 }
 .bsl_xian{
