--- a/public/index/css/index.css
+++ b/public/index/css/index.css
@@ -49,6 +49,7 @@
     left:2px;
     transition: all .4s ease;
     background: url(/index/images/bin_tline.png);
+    opacity:0;
 }
 .bin_line2{
     width:0;}
