--- a/public/index/css/inform.css
+++ b/public/index/css/inform.css
@@ -3,7 +3,7 @@ body{
 }
 .d_banner{
     width:100%;
-    height:590px;
+    height:598px;
     position:relative;
     overflow:hidden;
     z-index:-1;
@@ -58,7 +58,8 @@ body{
     bottom: 12px;
     left:2px;
     transition: all .4s ease;
-    background: black url(../images/bin_tline.png);
+    background:url(../images/bin_tline.png);
+    opacity:0;
     z-index:100;
 }
 .bin_line2{
