--- a/views/admin/news.html
+++ b/views/admin/news.html
@@ -8,8 +8,12 @@
     <title>Document</title>
     <link rel="stylesheet" href="/admin/css/antd.css.map">
     <link rel="stylesheet" href="/admin/css/antd.min.css">
+    <link rel="stylesheet" href="/admin/css/wangEditor.css">
     <link rel="stylesheet" href="/admin/css/nav.css">
     <link rel="stylesheet" href="/admin/css/news.css">
+    <script src="/admin/js/fetch.js"></script>
+    <script src="/admin/js/jquery-2.2.1.js"></script>
+    <script src="/admin/js/wangEditor.js"></script>
 </head>
 <body>
 <div id="page"></div>
